--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>A Recent Marketing Graduate with a Minor in Data Analytics and Supply Chain Management <br />
+							<h2>A MIS and Marketing Major with a Minors in Business Analytics and Computer Science <br />
 								</h2>
 						</header>
 						<p>My passion for marketing, coupled with my proficiency in data analytics and supply chain management, makes me confident in my ability to develop and execute successful marketing strategies that drive results. I am excited to bring my skills and experience to a dynamic team where I can continue to learn, grow, and make meaningful contributions. </p>
