--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<h2>A MIS and Marketing Major with a Minors in Business Analytics and Computer Science <br />
 								</h2>
 						</header>
-						<p>My passion for marketing, coupled with my proficiency in data analytics and supply chain management, makes me confident in my ability to develop and execute successful marketing strategies that drive results. I am excited to bring my skills and experience to a dynamic team where I can continue to learn, grow, and make meaningful contributions. </p>
+						<p>My passion for data, coupled with my proficiency in analytical tools and multiple programming languages, makes me confident in my ability to develop data-driven insights that drive results. I am excited to bring my skills and experience to a dynamic team where I can continue to learn, grow, and make meaningful contributions. </p>
 						<ul class="actions">
 						</ul>
 					</section>
