--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-					<h1><strong>Roberto Vasquez Portfolio:</strong> Skilled in SQL, Tableau, PowerBI, and Python.<br />
+					<h1><strong>Roberto Vasquez Portfolio:</strong> Skilled in SQL, Tableau, PowerBI, C++, Python, and HTML.<br />
 					<br />
 					</a></h1>
 				</div>
