--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>A Management Information Systems and Marketing Major with a Minors in Business Analytics and Computer Science <br />
+							<h2>A Management Information Systems and Marketing Major with a Minor in Business Analytics and Computer Science <br />
 								</h2>
 						</header>
 						<p>My passion for data, coupled with my proficiency in analytical tools and multiple programming languages, makes me confident in my ability to develop data-driven insights that drive results. I am excited to bring my skills and experience to a dynamic team where I can continue to learn, grow, and make meaningful contributions. </p>
