--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-					<h1><strong>Roberto Vasquez Portfolio:</strong> Skilled in SQL, Tableau, PowerBI, C++, Python, and HTML.<br />
+					<h1><strong>Roberto Vasquez Portfolio:</strong> Skilled in SQL, Tableau, PowerBI, Python, Predictive Analytics (Scikit-Learn), Large Language Models, and Forecasting.<br />
 					<br />
 					</a></h1>
 				</div>
@@ -30,7 +30,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>A Management Information Systems and Marketing Major with a Minor in Business Analytics and Computer Science <br />
+							<h2> Current MS-BA candidate, with a 3.925 GPA, with a Bachelor's in Marketing and a Minor in Business Analytics and Computer Science <br />
 								</h2>
 						</header>
 						<p>My passion for data, coupled with my proficiency in analytical tools and multiple programming languages, makes me confident in my ability to develop data-driven insights that drive results. I am excited to bring my skills and experience to a dynamic team where I can continue to learn, grow, and make meaningful contributions. </p>
@@ -42,6 +42,11 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a class="image fit"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<h3><a href="https://github.com/robertoalevasq/PortfolioProjects/blob/de3788cd9310308f2e7a458d44bee26421009f6c/PortfolioProjectMentalHealth.ipynb">Random Forest Classifier Model with Scikit-Learn</a></h3>
+								<p>Cleaned survey data & predicted class using Random Forest Classifier</p>
+							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a class="image fit"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3><a href="https://github.com/robertoalevasq/PortfolioProjects/blob/main/PortfolioProjectNashvilleHousing.sql">Data Cleaning in SQL</a></h3>
@@ -56,11 +61,6 @@
 								<a class="image fit"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3><a href="https://public.tableau.com/views/DallasAirbnbProject/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link">Tableau Airbnb Dashboard</a></h3>
 								<p>Created multiple visualizations using current Airbnb data from Dallas</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a class="image fit"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3><a href="https://app.powerbi.com/view?r=eyJrIjoiMWE2OTBmN2YtMzFhMy00MGFiLWFhZTgtODU1YmI2MDgzY2JkIiwidCI6ImVkZDc4ZTE0LTYwMzItNGZmNi05OTg0LWRlNjQ3NDhmOTM0OSIsImMiOjF9">PowerBI Profession Survey Dashboard</a></h3>
-								<p>Created multiple visualizations granting insight on data professionals.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a class="image fit"><img src="images/thumbs/05.jpg" alt="" /></a>
@@ -83,11 +83,11 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										(407) 792-9082
+										407.792.9082
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto:rav19b@fsu.edu">rav19b@fsu.edu</a>
+										<a href="mailto:robertoalevasquez@gmail.com">robertoalevasquez@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -419,8 +419,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="https://github.com/robertoalevasq" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/robertoalevasquez/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="mailto:rav19b@fsu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/robertoavasq/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="mailto:robertoalevasquez@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 			</footer>
